# omnipaxos-reconfiguration-service

./: .gitignore  Cargo.toml  README.md  clean.sh
config/: clean.sh
config/node1/: c1.conf
config/node2/: c1.conf
config/node3/: c1.conf
my_db_1/database/: db  snap.0000000000000B61  snap.0000000000000BC0
my_db_2/database/: db  snap.0000000000000E3A
my_db_3/database/: db  snap.0000000000000EA6  snap.0000000000000EEE
omnipaxos_client/: Cargo.toml
omnipaxos_client/src/: main.rs  message.rs
omnipaxos_server/: Cargo.toml
omnipaxos_server/src/: kv.rs  main.rs  message.rs  router.rs  server.rs  util.rs
