[package]
name = "omnipaxos_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
futures = "0.3.26"
omnipaxos_core = { git = "https://github.com/kevin-harrison/omnipaxos-fork" }
omnipaxos_storage = { git = "https://github.com/kevin-harrison/omnipaxos-fork" }
serde = "1.0.152"
serde_json = "1.0.93"
tokio = { version = "1.26.0", features = ["full"] }
tokio-serde = { version = "0.8.0", features = ["cbor"] }
tokio-util = { version = "0.7.7", features = ["codec"]}
