[package]
name = "omnipaxos_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
commitlog = "0.2.0"
env_logger = "0.10.0"
futures = "0.3.26"
log = "0.4.17"
omnipaxos_core = { git = "https://github.com/kevin-harrison/omnipaxos-fork" }
omnipaxos_storage = { git = "https://github.com/kevin-harrison/omnipaxos-fork" }
serde = "1.0.152"
serde_json = "1.0.93"
sled = "0.34.7"
tokio = { version = "1.26.0", features = ["full"] }
tokio-serde = { version = "0.8.0", features = ["json", "cbor"] }
tokio-stream = "0.1.12"
tokio-util = { version = "0.7.7", features = ["codec"]}
